Done with 2 Rows

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/iconoir-icons/iconoir@main/css/iconoir.css"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Abhilash BK</title>
   </head>
@@ -32,11 +36,18 @@
           </div>
           <div class="infos">
             <h4>A WEB DESIGNER</h4>
-            <h1>Abhilash <br> BK.</h1>
+            <h1>
+              Abhilash <br />
+              BK.
+            </h1>
             <p>I am a Web Designer based in India.</p>
-            <!-- <a href="#" class="about-btn">
-                <img src="./assets/images/icon.svg" alt="Button" />
-              </a> -->
+            <a href="./credentials.html" class="about-btn">
+              <img
+                src="https://wpriverthemes.com/landing/gridx-html/assets/images/icon.svg"
+                alt="Button"
+                class="hover-btn"
+              />
+            </a>
           </div>
         </div>
         <div class="bio__right">
@@ -47,20 +58,106 @@
           </p>
           <div class="bio__right-content">
             <div class="shadow__box">
-              <!-- <a href="#" class="about-btn">
-                            <img src="./assets/images/icon.svg" alt="Button" />
-                          </a> -->
+              <img src="assets/images/sign.png" alt="sign" />
+              <div class="sign__footer">
+                <div class="infos">
+                  <h4>more about me</h4>
+                  <h1>Credentials</h1>
+                </div>
+
+                <a href="./credentials.html" class="about-btn">
+                  <img
+                    src="https://wpriverthemes.com/landing/gridx-html/assets/images/icon.svg"
+                    alt="Button"
+                    class="hover-btn"
+                  />
+                </a>
+              </div>
             </div>
             <div class="shadow__box">
-              <!-- <a href="#" class="about-btn">
-                            <img src="./assets/images/icon.svg" alt="Button" />
-                          </a> -->
+              <img src="assets/images/projects.png" alt="sign" />
+              <div class="sign__footer">
+                <div class="infos">
+                  <h4>Showcase</h4>
+                  <h1>Projects</h1>
+                </div>
+
+                <a href="./credentials.html" class="about-btn">
+                  <img
+                    src="https://wpriverthemes.com/landing/gridx-html/assets/images/icon.svg"
+                    alt="Button"
+                    class="hover-btn"
+                  />
+                </a>
+              </div>
             </div>
           </div>
         </div>
-        <div class="blog shadow__box"></div>
-        <div class="services shadow__box"></div>
-        <div class="profiles shadow__box"></div>
+        <div class="blog shadow__box">
+          <div class="image">
+            <img src="/assets/images/gfonts.png" alt="Google Fonts" />
+          </div>
+          <div class="sign__footer">
+            <div class="infos">
+              <h4>blog</h4>
+              <h1>GFonts</h1>
+            </div>
+
+            <a href="./credentials.html" class="about-btn">
+              <img
+                src="https://wpriverthemes.com/landing/gridx-html/assets/images/icon.svg"
+                alt="Button"
+                class="hover-btn"
+              />
+            </a>
+          </div>
+        </div>
+        <div class="services shadow__box">
+          <div class="icon-boxes">
+            <i class="iconoir-camera"></i>
+            <i class="iconoir-design-pencil"></i>
+            <i class="iconoir-color-filter"></i>
+            <i class="iconoir-dev-mode-phone"></i>
+          </div>
+          <div class="sign__footer">
+            <div class="infos">
+              <h4>specialization</h4>
+              <h1>Services Offering</h1>
+            </div>
+
+            <a href="./credentials.html" class="about-btn">
+              <img
+                src="https://wpriverthemes.com/landing/gridx-html/assets/images/icon.svg"
+                alt="Button"
+                class="hover-btn"
+              />
+            </a>
+          </div>
+        </div>
+        <div class="profiles shadow__box">
+          <div class="inner-profile-icons shadow-box">
+            <a href="#">
+              <i class="iconoir-dribbble"></i>
+            </a>
+            <a href="#">
+              <i class="iconoir-twitter"></i>
+            </a>
+          </div>
+          <div class="sign__footer">
+            <div class="infos">
+              <h4>Stay With Me</h4>
+              <h1>Profiles</h1>
+            </div>
+
+            <a href="./credentials.html" class="about-btn">
+              <img
+                src="https://wpriverthemes.com/landing/gridx-html/assets/images/icon.svg"
+                alt="Button"
+                class="hover-btn"
+              />
+            </a>
+          </div>
+        </div>
         <div class="stats shadow__box"></div>
         <div class="collab shadow__box"></div>
       </section>
