--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/iconoir-icons/iconoir@main/css/iconoir.css"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
     <title>Abhilash BK</title>
   </head>
@@ -30,7 +31,7 @@
     </header>
     <main>
       <section class="container main__section">
-        <div class="bio shadow__box">
+        <div class="bio shadow__box" data-aos="zoom-in">
           <div class="image">
             <img src="/assets/images/abhi.jpg" alt="My image" />
           </div>
@@ -51,13 +52,15 @@
           </div>
         </div>
         <div class="bio__right">
-          <p class="flow__text shadow__box">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. A
-            perspiciatis qui blanditiis modi dolores corporis? Totam quam
-            consequatur labore fugit.
-          </p>
+          <div class="flow__text shadow__box" data-aos="zoom-in">
+            <p class="">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. A
+              perspiciatis qui blanditiis modi dolores corporis? Totam quam
+              consequatur labore fugit.
+            </p>
+          </div>
           <div class="bio__right-content">
-            <div class="shadow__box">
+            <div class="shadow__box" data-aos="zoom-in">
               <img src="assets/images/sign.png" alt="sign" />
               <div class="sign__footer">
                 <div class="infos">
@@ -74,7 +77,7 @@
                 </a>
               </div>
             </div>
-            <div class="shadow__box">
+            <div class="shadow__box" data-aos="zoom-in">
               <img src="assets/images/projects.png" alt="sign" />
               <div class="sign__footer">
                 <div class="infos">
@@ -93,7 +96,7 @@
             </div>
           </div>
         </div>
-        <div class="blog shadow__box">
+        <div class="blog shadow__box" data-aos="zoom-in">
           <div class="image">
             <img src="/assets/images/gfonts.png" alt="Google Fonts" />
           </div>
@@ -112,7 +115,7 @@
             </a>
           </div>
         </div>
-        <div class="services shadow__box">
+        <div class="services shadow__box" data-aos="zoom-in">
           <div class="icon-boxes">
             <i class="iconoir-camera"></i>
             <i class="iconoir-design-pencil"></i>
@@ -134,7 +137,7 @@
             </a>
           </div>
         </div>
-        <div class="profiles shadow__box">
+        <div class="profiles shadow__box" data-aos="zoom-in">
           <div class="inner-profile-icons shadow-box">
             <a href="#">
               <i class="iconoir-dribbble"></i>
@@ -158,10 +161,58 @@
             </a>
           </div>
         </div>
-        <div class="stats shadow__box"></div>
-        <div class="collab shadow__box"></div>
+        <div class="stats shadow__box" data-aos="zoom-in">
+          <div class="shadow__box">
+            <div class="value">07</div>
+            <p>Years Experience</p>
+          </div>
+          <div class="shadow__box">
+            <div class="value">+125</div>
+            <p>Clients Worldwide</p>
+          </div>
+          <div class="shadow__box">
+            <div class="value">100+</div>
+            <p>Total Projects</p>
+          </div>
+        </div>
+        <div class="collab shadow__box" data-aos="zoom-in">
+          <img src="/assets/images/arrow.png" alt="Arrow" />
+          <div>
+            <h1>Let's <br />work <span>together.</span></h1>
+            <a href="./credentials.html" class="about-btn">
+              <img
+                src="https://wpriverthemes.com/landing/gridx-html/assets/images/icon.svg"
+                alt="Button"
+                class="hover-btn"
+              />
+            </a>
+          </div>
+        </div>
       </section>
+      <footer class="container footer-area">
+        <a href="./index.html" class="logo">
+          <img
+            src="https://wpriverthemes.com/landing/gridx-html/assets/images/logo.svg"
+            alt="Logo"
+          />
+        </a>
+        <ul class="footer-menu">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="works.html">Works</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <p class="copyright">
+          © All rights reserved by <span>WordPress River</span>
+        </p>
+      </footer>
     </main>
-    <footer></footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        duration: 1500,
+        once: true,
+      });
+    </script>
   </body>
 </html>
