--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <nav class="nav">
         <ul>
           <li><a href="/" class="active">Home</a></li>
-          <li><a href="/">About</a></li>
+          <li><a href="about.html">About</a></li>
           <li><a href="/">Contact</a></li>
         </ul>
       </nav>
