--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/iconoir-icons/iconoir@main/css/iconoir.css"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="about.css" />
     <title>About Page</title>
@@ -17,19 +18,19 @@
       <nav class="nav">
         <ul>
           <li><a href="/">Home</a></li>
-          <li><a href="/" class="active">About</a></li>
+          <li><a href="about.html" class="active">About</a></li>
           <li><a href="/">Contact</a></li>
         </ul>
       </nav>
       <a class="btn">Let's Talk</a>
     </header>
     <main>
-      <section class="container main__section">
-        <div class="image shadow__box">
+      <section class="container main__section about-section">
+        <div class="image shadow__box" data-aos="zoom-in">
           <img src="./assets/images/abhi.jpg" alt="My Pic" />
         </div>
-        <div class="right">
-          <h1 class="section__heading">
+        <div class="right" data-aos="zoom-in">
+          <h1 class="section__heading" data-aos="fade-up">
             <img src="./assets/images/star-2.png" alt="Star 2" />
             SELF-SUMMARY
             <img src="./assets/images/star-2.png" alt="Star 2" />
@@ -44,7 +45,7 @@
             </p>
           </div>
         </div>
-        <div class="experience shadow__box">
+        <div class="experience shadow__box" data-aos="zoom-in">
           <h3>Experience</h3>
           <ul>
             <li>
@@ -59,7 +60,7 @@
             </li>
           </ul>
         </div>
-        <div class="experience shadow__box">
+        <div class="experience shadow__box" data-aos="zoom-in">
           <h3>Experience</h3>
           <ul>
             <li>
@@ -111,7 +112,48 @@
             </a>
           </div>
         </div>
+        <div class="profiles shadow__box" data-aos="zoom-in">
+          <img src="./assets/images/sign.png" alt="" />
+          <div class="sign__footer">
+            <div class="infos">
+              <h4>Stay With Me</h4>
+              <h1>Profiles</h1>
+            </div>
+
+            <a href="./credentials.html" class="about-btn">
+              <img
+                src="https://wpriverthemes.com/landing/gridx-html/assets/images/icon.svg"
+                alt="Button"
+                class="hover-btn"
+              />
+            </a>
+          </div>
+        </div>
       </section>
+      <footer class="container footer-area">
+        <a href="./index.html" class="logo">
+          <img
+            src="https://wpriverthemes.com/landing/gridx-html/assets/images/logo.svg"
+            alt="Logo"
+          />
+        </a>
+        <ul class="footer-menu">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="works.html">Works</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <p class="copyright">
+          © All rights reserved by <span>WordPress River</span>
+        </p>
+      </footer>
     </main>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        duration: 1500,
+        once: true,
+      });
+    </script>
   </body>
 </html>
