Added the Contact Page Layout

--- a/about.html
+++ b/about.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/iconoir-icons/iconoir@main/css/iconoir.css"
@@ -13,13 +19,13 @@
     <title>About Page</title>
   </head>
   <body>
-    <header class="header">
+    <header class="header container">
       <div class="logo">BK</div>
       <nav class="nav">
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="about.html" class="active">About</a></li>
-          <li><a href="/">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
       <a class="btn">Let's Talk</a>
@@ -37,7 +43,7 @@
           </h1>
           <div class="right-content shadow__box">
             <img src="./assets/images/arrow.png" alt="Star" />
-            <h1>David Henderson</h1>
+            <h1>Abhilash BK</h1>
             <p>
               I am a San francisco-based product designer with a focus on web
               design, illustration, a visual development. I have a diverse range
@@ -100,7 +106,7 @@
           </div>
         </div>
         <div class="collab shadow__box" data-aos="zoom-in">
-          <img src="/assets/images/arrow.png" alt="Arrow" />
+          <img src="./assets/images/arrow.png" alt="Arrow" />
           <div>
             <h1>Let's <br />work <span>together.</span></h1>
             <a href="./credentials.html" class="about-btn">
