--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <title>Abhilash BK</title>
   </head>
   <body>
-    <header class="header">
+    <header class="container header">
       <div class="logo">BK</div>
       <nav class="nav">
         <ul>
           <li><a href="/" class="active">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="/">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
       <a class="btn">Let's Talk</a>
@@ -33,7 +33,7 @@
       <section class="container main__section">
         <div class="bio shadow__box" data-aos="zoom-in">
           <div class="image">
-            <img src="/assets/images/abhi.jpg" alt="My image" />
+            <img src="./assets/images/abhi.jpg" alt="My image" />
           </div>
           <div class="infos">
             <h4>A WEB DESIGNER</h4>
@@ -98,7 +98,7 @@
         </div>
         <div class="blog shadow__box" data-aos="zoom-in">
           <div class="image">
-            <img src="/assets/images/gfonts.png" alt="Google Fonts" />
+            <img src="./assets/images/gfonts.png" alt="Google Fonts" />
           </div>
           <div class="sign__footer">
             <div class="infos">
@@ -176,7 +176,7 @@
           </div>
         </div>
         <div class="collab shadow__box" data-aos="zoom-in">
-          <img src="/assets/images/arrow.png" alt="Arrow" />
+          <img src="./assets/images/arrow.png" alt="Arrow" />
           <div>
             <h1>Let's <br />work <span>together.</span></h1>
             <a href="./credentials.html" class="about-btn">
