--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
       <div class="logo">BK</div>
       <nav class="nav">
         <ul>
-          <li><a href="/">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="about.html" class="active">About</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -146,7 +146,7 @@
         <ul class="footer-menu">
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="works.html">Works</a></li>
+          <!-- <li><a href="works.html">Works</a></li> -->
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <p class="copyright">
