--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,7 @@
     />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="contact.css" />
     <title>Contact Me</title>
   </head>
   <body>
@@ -22,7 +23,7 @@
       <div class="logo">BK</div>
       <nav class="nav">
         <ul>
-          <li><a href="/">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html" class="active">Contact</a></li>
         </ul>
@@ -30,7 +31,82 @@
       <a class="btn">Let's Talk</a>
     </header>
     <main>
-      <section class="container"></section>
+      <section class="container contact__section">
+        <div class="contact__info">
+          <h3 data-aos="fade-up">Contact Info</h3>
+          <ul class="contact-details">
+            <li data-aos="zoom-in">
+              <div class="icon-box shadow__box">
+                <i class="iconoir-mail"></i>
+              </div>
+              <div class="right">
+                <span>MAIL us</span>
+                <h4>info@bluebase.com</h4>
+                <h4>info@bluebase2.com</h4>
+              </div>
+            </li>
+
+            <li data-aos="zoom-in">
+              <div class="icon-box shadow__box">
+                <i class="iconoir-phone"></i>
+              </div>
+              <div class="right">
+                <span>Contact Us</span>
+                <h4>+1 504-899-8221</h4>
+                <h4>+1 504-749-5456</h4>
+              </div>
+            </li>
+
+            <li data-aos="zoom-in">
+              <div class="icon-box shadow__box">
+                <i class="iconoir-pin-alt"></i>
+              </div>
+              <div class="right">
+                <span>Location</span>
+                <h4>
+                  22 Baker Street, Texas <br />United States <br />W1U 3BW
+                </h4>
+              </div>
+            </li>
+          </ul>
+          <h3 data-aos="fade-up">Social Info</h3>
+          <div class="social shadow-box" data-aos="zoom-in">
+            <a href="#" class="shadow__box">
+              <i class="iconoir-dribbble"></i>
+            </a>
+            <a href="#" class="shadow__box">
+              <i class="iconoir-twitter"></i>
+            </a>
+            <a href="#" class="shadow__box">
+              <i class="iconoir-instagram"></i>
+            </a>
+          </div>
+        </div>
+        <div class="form shadow__box" data-aos="zoom-in">
+          <h1>Lets Work <span>Together</span></h1>
+          <form>
+            <div class="form__field">
+              <input type="text" placeholder="Name*" />
+            </div>
+            <div class="form__field">
+              <input type="text" placeholder="Email*" />
+            </div>
+            <div class="form__field">
+              <input type="text" placeholder="Your Subject*" />
+            </div>
+            <div class="form__field">
+              <textarea
+                name="message"
+                id="message"
+                cols="30"
+                rows="10"
+                placeholder="Your Message*"
+              ></textarea>
+            </div>
+            <button class="btn">Send Message</button>
+          </form>
+        </div>
+      </section>
     </main>
     <footer class="container footer-area">
       <a href="./index.html" class="logo">
@@ -42,7 +118,7 @@
       <ul class="footer-menu">
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="works.html">Works</a></li>
+        <!-- <li><a href="works.html">Works</a></li> -->
         <li><a href="contact.html">Contact</a></li>
       </ul>
       <p class="copyright">
