--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="logo">BK</div>
       <nav class="nav">
         <ul>
-          <li><a href="/" class="active">Home</a></li>
+          <li><a href="index.html" class="active">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -199,7 +199,7 @@
         <ul class="footer-menu">
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="works.html">Works</a></li>
+          <!-- <li><a href="works.html">Works</a></li> -->
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <p class="copyright">
