Added Btn Links

--- a/about.html
+++ b/about.html
@@ -109,7 +109,7 @@
           <img src="./assets/images/arrow.png" alt="Arrow" />
           <div>
             <h1>Let's <br />work <span>together.</span></h1>
-            <a href="./credentials.html" class="about-btn">
+            <a href="./contact.html" class="about-btn">
               <img
                 src="https://wpriverthemes.com/landing/gridx-html/assets/images/icon.svg"
                 alt="Button"
