--- a/index.html
+++ b/index.html
@@ -163,15 +163,15 @@
         </div>
         <div class="stats shadow__box" data-aos="zoom-in">
           <div class="shadow__box">
-            <div class="value">07</div>
+            <div class="value">03</div>
             <p>Years Experience</p>
           </div>
           <div class="shadow__box">
-            <div class="value">+125</div>
+            <div class="value">3+</div>
             <p>Clients Worldwide</p>
           </div>
           <div class="shadow__box">
-            <div class="value">100+</div>
+            <div class="value">50+</div>
             <p>Total Projects</p>
           </div>
         </div>
@@ -179,7 +179,7 @@
           <img src="./assets/images/arrow.png" alt="Arrow" />
           <div>
             <h1>Let's <br />work <span>together.</span></h1>
-            <a href="./credentials.html" class="about-btn">
+            <a href="./contact.html" class="about-btn">
               <img
                 src="https://wpriverthemes.com/landing/gridx-html/assets/images/icon.svg"
                 alt="Button"
