Added Personal Infos

--- a/about.html
+++ b/about.html
@@ -45,24 +45,24 @@
             <img src="./assets/images/arrow.png" alt="Star" />
             <h1>Abhilash BK</h1>
             <p>
-              I am a San francisco-based product designer with a focus on web
-              design, illustration, a visual development. I have a diverse range
-              of experience having worked across various fields and industries.
+              An Aspiring, Dedicated and Hardworking Data Analyst and a Node JS
+              based Web Developer willing to work in a Reputed Organization and
+              contribute to the Organization's Success!
             </p>
           </div>
         </div>
         <div class="experience shadow__box" data-aos="zoom-in">
-          <h3>Experience</h3>
+          <h3>Education</h3>
           <ul>
             <li>
-              <p class="date">2007 - 2017</p>
-              <h2>Framer Designer &amp; Developer</h2>
-              <p class="type">Bluebase Designs</p>
+              <p class="date">2019 - 2022</p>
+              <h2>Bachelor's in Physics</h2>
+              <p class="type">PSG College, Coimbatore</p>
             </li>
             <li>
-              <p class="date">2017 - 2023</p>
-              <h2>Front-End Developer</h2>
-              <p class="type">Larsen &amp; Toubro</p>
+              <p class="date">2022 - 2024</p>
+              <h2>Masters in Computer Science</h2>
+              <p class="type">Rajagiri College of Social Sciences, Ernakulam</p>
             </li>
           </ul>
         </div>
@@ -70,14 +70,14 @@
           <h3>Experience</h3>
           <ul>
             <li>
-              <p class="date">2007 - 2017</p>
-              <h2>Framer Designer &amp; Developer</h2>
-              <p class="type">Bluebase Designs</p>
+              <p class="date">2020 - 2022</p>
+              <h2>Web Developer</h2>
+              <p class="type">Freelancing</p>
             </li>
             <li>
-              <p class="date">2017 - 2023</p>
-              <h2>Front-End Developer</h2>
-              <p class="type">Larsen &amp; Toubro</p>
+              <p class="date">Jan 2021 - October 2021</p>
+              <h2>App Developer - Flutter</h2>
+              <p class="type">Freelancing</p>
             </li>
           </ul>
         </div>
@@ -150,7 +150,7 @@
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <p class="copyright">
-          © All rights reserved by <span>WordPress River</span>
+          © All rights reserved by <span>BKoders tech</span>
         </p>
       </footer>
     </main>
