--- a/contact.html
+++ b/contact.html
@@ -41,8 +41,8 @@
               </div>
               <div class="right">
                 <span>MAIL us</span>
-                <h4>info@bluebase.com</h4>
-                <h4>info@bluebase2.com</h4>
+                <h4>bkabhilash0@gmail.com.com</h4>
+                <!-- <h4>info@bluebase2.com</h4> -->
               </div>
             </li>
 
@@ -52,8 +52,8 @@
               </div>
               <div class="right">
                 <span>Contact Us</span>
-                <h4>+1 504-899-8221</h4>
-                <h4>+1 504-749-5456</h4>
+                <h4>+91 9384969837</h4>
+                <!-- <h4>+1 504-749-5456</h4> -->
               </div>
             </li>
 
@@ -64,7 +64,7 @@
               <div class="right">
                 <span>Location</span>
                 <h4>
-                  22 Baker Street, Texas <br />United States <br />W1U 3BW
+                  Trivandrum <br />Kerala <br />India
                 </h4>
               </div>
             </li>
@@ -77,7 +77,7 @@
             <a href="#" class="shadow__box">
               <i class="iconoir-twitter"></i>
             </a>
-            <a href="#" class="shadow__box">
+            <a href="https://www.instagram.com/iam__bk/" class="shadow__box" target="_blank">
               <i class="iconoir-instagram"></i>
             </a>
           </div>
@@ -122,7 +122,7 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
       <p class="copyright">
-        © All rights reserved by <span>WordPress River</span>
+        © All rights reserved by <span>BKoders tech</span>
       </p>
     </footer>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
