--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               Abhilash <br />
               BK.
             </h1>
-            <p>I am a Web Designer based in India.</p>
+            <p>An aspiring Data Analyst and Web Developer</p>
             <a href="./credentials.html" class="about-btn">
               <img
                 src="https://wpriverthemes.com/landing/gridx-html/assets/images/icon.svg"
@@ -54,9 +54,7 @@
         <div class="bio__right">
           <div class="flow__text shadow__box" data-aos="zoom-in">
             <p class="">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. A
-              perspiciatis qui blanditiis modi dolores corporis? Totam quam
-              consequatur labore fugit.
+              An Aspiring Data Analyst and Web Developer willing to work in a Reputed Organization and contribute to the Organization's Success!
             </p>
           </div>
           <div class="bio__right-content">
@@ -68,7 +66,7 @@
                   <h1>Credentials</h1>
                 </div>
 
-                <a href="./credentials.html" class="about-btn">
+                <a href="./about.html" class="about-btn">
                   <img
                     src="https://wpriverthemes.com/landing/gridx-html/assets/images/icon.svg"
                     alt="Button"
@@ -203,7 +201,7 @@
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <p class="copyright">
-          © All rights reserved by <span>WordPress River</span>
+          © All rights reserved by <span>BKoders tech</span>
         </p>
       </footer>
     </main>
