Added the Toast and Final Touches

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
-      <a class="btn">Let's Talk</a>
+      <a href="contact.html" class="btn" style="text-decoration: none;">Let's Talk</a>
     </header>
     <main>
       <section class="container main__section about-section">
@@ -137,11 +137,8 @@
         </div>
       </section>
       <footer class="container footer-area">
-        <a href="./index.html" class="logo">
-          <img
-            src="https://wpriverthemes.com/landing/gridx-html/assets/images/logo.svg"
-            alt="Logo"
-          />
+        <a href="./index.html" class="logo" style="text-decoration: none">
+          <div class="logo">BK</div>
         </a>
         <ul class="footer-menu">
           <li><a href="index.html">Home</a></li>
