--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
-      <a class="btn">Let's Talk</a>
+      <a href="contact.html" class="btn" style="text-decoration: none;">Let's Talk</a>
     </header>
     <main>
       <section class="container main__section">
@@ -54,7 +54,8 @@
         <div class="bio__right">
           <div class="flow__text shadow__box" data-aos="zoom-in">
             <p class="">
-              An Aspiring Data Analyst and Web Developer willing to work in a Reputed Organization and contribute to the Organization's Success!
+              An Aspiring Data Analyst and Web Developer willing to work in a
+              Reputed Organization and contribute to the Organization's Success!
             </p>
           </div>
           <div class="bio__right-content">
@@ -188,11 +189,8 @@
         </div>
       </section>
       <footer class="container footer-area">
-        <a href="./index.html" class="logo">
-          <img
-            src="https://wpriverthemes.com/landing/gridx-html/assets/images/logo.svg"
-            alt="Logo"
-          />
+        <a href="./index.html" class="logo" style="text-decoration: none">
+          <div class="logo">BK</div>
         </a>
         <ul class="footer-menu">
           <li><a href="index.html">Home</a></li>
